--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ roc-law-corpus = 'roc_law_corpus.cli:main'
 python = "^3.10"
 scrapy = "^2.9.0"
 juliacall = "^0.9.13"
+juliapkg = "^0.1.10"
 pdfplumber = "^0.9.0"
 orjson = "^3.9.1"
 
